# xmobot

./: CMakeLists.txt  LICENSE  README.md  ijdfspdsf  package.xml
config/: akm_controller.yaml  arm_gazebo.yaml  base_gazebo.yaml  controller_gazebo.yaml  diff_controller.yaml
launch/: display.launch  display_launch.py  gazebo.launch  gazebo_launch.py
rviz/: xmobot_display.rviz
scripts/: ackermann_drive.py
urdf/: xmobot.urdf.xacro  xmobot_arm.xacro  xmobot_arm_gazebo.xacro  xmobot_base.xacro  xmobot_base_gazebo.xacro  xmobot_drive.xacro  xmobot_gazebo.xacro  xmobot_inertial.xacro  xmobot_sensors.xacro
worlds/: station.world  xmobot.world
worlds/photovoltaic/: model.config  model.sdf
worlds/photovoltaic/meshes/: photovoltaic.stl
worlds/power_station/: model.config  model.sdf
