<?xml version="1.0"?>
<package format="3">
  <name>xmobot</name>
  <version>0.1.0</version>
  <description>
    Xmobot is a flexible and modular mobile robot platform designed for SLAM, path planning,
    and end-to-end navigation benchmarking across diverse drive types: differential,
    Ackermann, Mecanum (omnidirectional), and four-wheel independent steering with driving.
  </description>

  <maintainer email="wangyizhi@csu.edu.cn">Yeats Wang</maintainer>
  <author email="wangyizhi@csu.edu.cn">Yeats Wang</author>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>controller_manager</depend>
  <depend>ros2_control</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>